# scrcpy

app/: scrcpy
app/android/: CMakeLists.txt
app/src/: CMakeLists.txt  command.c  config.h  main.c  scrcpy.c  server.c
scripts/: build.sh
server/gradle/wrapper/: gradle-wrapper.properties
